Remove hardcoded position and size of the indicators

Introduce new constants and remove the hardcoded numbers.
This is small clean up before introducing a linear layout.

BUG=732812

Change-Id: I80112b18fdeef006b1ab0ae8da75f730d6ea766e
Reviewed-on: https://chromium-review.googlesource.com/533493
Reviewed-by: Christopher Grant <cjgrant@chromium.org>
Commit-Queue: Amirhossein Simjour <asimjour@chromium.org>
Cr-Commit-Position: refs/heads/master@{#479141}
Former-commit-id: fc3a18b2ecfaec67f409b94d3832fa49c8dbd81e